# OpenMCP

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: smoke.sh
src/: app.rs  main.rs  models.rs  opencode.rs  storage.rs
