[package]
name = "OpenMCP"
version = "0.1.0"
edition = "2024"
description = "A lightweight native desktop guide for wiring MCP servers into OpenCode."
license = "MIT"

[dependencies]
dirs = "6.0.0"
eframe = { version = "0.33.0", default-features = true }
egui = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
